--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JavaScript</title>
+  <title>BlipDoc - Rock. Paper. Scissors</title>
   <style>
     body {
       background-color: rgb(43, 38, 38);
